force-app/main/default/objects/Lead/fields/IP_Address__c.field-meta.xml
<CustomField>
    <fullName>IP_Address__c</fullName>
    <label>IP Address</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>