force-app/main/default/objects/Lead/fields/Pages__c.field-meta.xml
<CustomField>
    <fullName>Pages__c</fullName>
    <description>Pages visited</description>
    <inlineHelpText>Pages visited</inlineHelpText>
    <label>Pages</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>