force-app/main/default/objects/Lead/fields/Requested_Page__c.field-meta.xml
<CustomField>
    <fullName>Requested_Page__c</fullName>
    <label>Requested Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>