force-app/main/default/objects/Lead/fields/Return_Visit__c.field-meta.xml
<CustomField>
    <fullName>Return_Visit__c</fullName>
    <label>Return Visit</label>
    <type>DateTime</type>
</CustomField>