force-app/main/default/objects/Lead/fields/Search_Engine__c.field-meta.xml
<CustomField>
    <fullName>Search_Engine__c</fullName>
    <label>Search Engine</label>
    <length>25</length>
    <type>Text</type>
</CustomField>