force-app/main/default/objects/Lead/fields/Search_Phrase__c.field-meta.xml
<CustomField>
    <fullName>Search_Phrase__c</fullName>
    <label>Search Phrase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>