force-app/main/default/objects/Lead/fields/Topics__c.field-meta.xml
<CustomField>
    <fullName>Topics__c</fullName>
    <label>Topics</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>