force-app/main/default/objects/Lead/fields/Visitor_City__c.field-meta.xml
<CustomField>
    <fullName>Visitor_City__c</fullName>
    <label>Visitor City</label>
    <length>25</length>
    <type>Text</type>
</CustomField>