force-app/main/default/objects/Lead/fields/Visitor_State__c.field-meta.xml
<CustomField>
    <fullName>Visitor_State__c</fullName>
    <label>Visitor State</label>
    <length>18</length>
    <type>Text</type>
</CustomField>